--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": { 
+  "dependencies": {
     "@formspree/react": "^2.5.1",
     "next": "^14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "eslint": "^8",
